implemented depositing and sending funds
